Finished up first post

--- a/neuron1408.html
+++ b/neuron1408.html
@@ -92,9 +92,21 @@
 </p>
                 <strong><p>Identification of small molecules binding the GGGGCC repeat expansion
 </p></strong>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus, est!</p>
-
+                <p>The first step in finding small molecules binding the repeat expansion is to gain insight about its structure. In order to do that, they performed optical melts (experiments that provide measurements of thermodynamic parameters of nucleic acids) in the presence of K+ and Na+ and found that it has both a hairpin and a G-quadruplex structure.
+</p>
+                <p>Earlier this year the group of developed a strategy to identify small molecules that bind RNA based on RNA small molecule interactions. They also identified a small molecule, 1a, that binds the CGG repeat found in FXTAS. Given the structural similarity between the GGGGCC repeat and the CGG repeat they hypothesized that 1a and similar compounds may bind the GGGGCC repeat. 3 compounds were identified.
+</p>
+                <p>Next, they checked if the compounds also bound the CCCCGG repeat in cells. Having stablished that they did, they checked for the effect on RAN translation (non-ATG translation, which is one of the primary pathogenic mechanisms associated with the repeat). Compounds 1a and 2 had a significant effect in RAN translation and decreased the percentage of cells containing nuclear aggregates.
+</p>
+                <p>The following step was to test it in a disease model. They derived neurons from fibroblasts with and without the C9ORF72 repeat expansion. Compound 1a significantly decreased the percentage of cells containing RNA aggregates. There was toxicity associated with compound 2 in the neurons, so its effect on neurons was not tested.
+</p>
+                <p>Summary: they identified a small molecule that can inhibit RNA aggregate formation and RAN translation, which are the 2 main pathogenic mechanism associated with C9ORF72 ALS, which is the most common type of ALS.
+</p>
+                <strong><p>Biomarker
+</p></strong>
+                <p>They developed an immunoassay to detect c9RAN proteins in cerebrospinal fluid. They found that the proteins are detectable. The biomarker has yet to be verified, but it could be a way to track disease progression and measure drug efficacy, which might significantly improve ALS clinical trials
+</p>
+                <p>Su, Z., Zhang, Y., Gendron, T. F., Bauer, P. O., Chew, J., Yang, W.-Y., … Disney, M. D. (2014). Discovery of a Biomarker and Lead Small Molecules to Target r(GGGGCC)-Associated Defects in c9FTD/ALS. Neuron, 1–8. doi:10.1016/j.neuron.2014.07.041</p>
                 <hr>
 
                 <!-- Blog Comments -->
