--- a/about.html
+++ b/about.html
@@ -9,13 +9,16 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Blog Post - Start Bootstrap Template</title>
+    <title>About ALS
+        </title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/blog-post.css" rel="stylesheet">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -39,19 +42,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <a class="navbar-brand" href="index.html">ALS news</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">About</a>
+                        <a href="about.html">About ALS</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
+                        <a href="editorial.html">Editorial</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -71,32 +74,28 @@
                 <!-- Blog Post -->
 
                 <!-- Title -->
-                <h1>Blog Post Title</h1>
+                <h1>About ALS</h1>
 
                 <!-- Author -->
-                <p class="lead">
-                    by <a href="#">Start Bootstrap</a>
-                </p>
 
                 <hr>
 
                 <!-- Date/Time -->
-                <p><span class="glyphicon glyphicon-time"></span> Posted on August 24, 2013 at 9:00 PM</p>
 
-                <hr>
-
-                <!-- Preview Image -->
-                <img class="img-responsive" src="http://placehold.it/900x300" alt="">
-
-                <hr>
 
                 <!-- Post Content -->
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus, est!</p>
+                <p class="lead">
+                  Amyotrophic lateral sclerosis (ALS), was first described in 1869 by Dr. Jean Martin Charcot. ALS is a neurodegenerative disorder which causes injury and death of upper motor neurons in the motor cortex, and of lower motor neurons in the brainstem and spinal cord. This results in progressive muscle weakness, atrophy, and spasticity culminating in death from respiratory failure.
+</p>
+                <p>The average survival rate from symptom onset is approximately 3 to 5 years, although a small proportion of patients have a more favorable prognosis. It is estimated that about 285,200 people currently live with ALS and about 16 of them die each day.
+</p>
+                <p>Amyotrophic comes from greek. "A" means no, "Myo" means muscle and "Trophic" means nourishment. "Lateral" is the area in the spinal cord that is affected. As the lateral spinal cord degenerates, it leads to scarring, "sclerosis".
+</p>
+                <p> Currently only one drug (Riluzole) is approved for the treatment of ALS. It extends patient’s lifespan for a maximum of 3 months. Despite this, there are several promising clinical trials and tools that can improve patient's quality of life.
+</p>
+                <strong><p>Familial ALS</p></strong>
 
+                <p></p> 
                 <hr>
 
                 <!-- Blog Comments -->
@@ -160,83 +159,131 @@
             <!-- Blog Sidebar Widgets Column -->
             <div class="col-md-4">
 
-                <!-- Blog Search Well -->
-                <div class="well">
-                    <h4>Blog Search</h4>
-                    <div class="input-group">
-                        <input type="text" class="form-control">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">
-                                <span class="glyphicon glyphicon-search"></span>
-                        </button>
-                        </span>
-                    </div>
-                    <!-- /.input-group -->
-                </div>
+   <div class="well text-center">
+     <p class="lead">
+       Don't want to miss updates? Please click the below button!
+     </p>
+     <button class="btn btn-primary btn-lg">Subscribe to my feed</button>
+   </div>
 
-                <!-- Blog Categories Well -->
-                <div class="well">
-                    <h4>Blog Categories</h4>
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled">
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled">
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- /.row -->
-                </div>
+   <div class="well">
+       <h4>Blog Search</h4>
+       <div class="input-group">
+         <script>
+         (function() {
+           var cx = '011906290031035704904:-o-3j3gb-bi';
+           var gcse = document.createElement('script');
+           gcse.type = 'text/javascript';
+           gcse.async = true;
+           gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+               '//www.google.com/cse/cse.js?cx=' + cx;
+           var s = document.getElementsByTagName('script')[0];
+           s.parentNode.insertBefore(gcse, s);
+         })();
+       </script>
+       <gcse:search></gcse:search>
+       </div>
+       <!-- /.input-group -->
+   </div>
 
-                <!-- Side Widget Well -->
-                <div class="well">
-                    <h4>Side Widget Well</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci accusamus laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
-                </div>
+   <div class="panel panel-default">
+     <div class="panel-heading">
+       <h4>Latest Posts</h4>
+     </div>
+     <ul class="list-group">
+       <li class="list-group-item"><a href="singlepost.html">1. Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</a></li>
+       <!--<li class="list-group-item"><a href="singlepost.html">2. </a></li>
+       <li class="list-group-item"><a href="singlepost.html">3. </a></li>
+       <li class="list-group-item"><a href="singlepost.html">4. </a></li>
+       <li class="list-group-item"><a href="singlepost.html">5. </a></li>-->
+     </ul>
+   </div>
 
+    <!-- Blog Categories Well -->
+    <div class="well">
+        <h4>Blog Categories</h4>
+        <div class="row">
+            <div class="col-lg-6">
+                <ul class="list-unstyled">
+                    <li><a href="#">Newest Research</a>
+                    </li>
+                    <li><a href="#">Pipeline</a>
+                    </li>
+                    <li><a href="#">Major Papers</a>
+                    </li>
+                </ul>
             </div>
-
+            <!-- /.col-lg-6
+            <div class="col-lg-6">
+                <ul class="list-unstyled">
+                    <li><a href="#">Category Name</a>
+                    </li>
+                    <li><a href="#">Category Name</a>
+                    </li>
+                    <li><a href="#">Category Name</a>
+                    </li>
+                    <li><a href="#">Category Name</a>
+                    </li>
+                </ul>
+            </div>
+             /.col-lg-6 -->
         </div>
         <!-- /.row -->
-
-        <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
-                </div>
-            </div>
-            <!-- /.row -->
-        </footer>
-
     </div>
-    <!-- /.container -->
 
-    <!-- jQuery Version 1.11.0 -->
-    <script src="js/jquery-1.11.0.js"></script>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4>Tags</h4>
+      </div>
+      <div class="panel-body">
+        <ul class="list-inline">
+          <li><a href="#">C9ORF72</a></li>
+          <li><a href="#">Small Molecules</a></li>
+          <li><a href="#">Biomarkers</a></li>
+          <!--<li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>-->
+</ul>
+</div>
+</div>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+
+    <!-- Side Widget Well -->
+
+</div>
+
+</div>
+<!-- /.row -->
+
+<hr>
+
+<ul class="pager">
+    <li class="previous"><a href="index.html">← Back to posts</a></li>
+</ul>
+
+<!-- Footer -->
+<footer>
+<div class="row">
+    <div class="col-lg-12">
+        <p>Copyright &copy; ALS news 2014</p>
+    </div>
+    <!-- /.col-lg-12 -->
+</div>
+<!-- /.row -->
+</footer>
+
+</div>
+<!-- /.container -->
+
+<!-- jQuery Version 1.11.0 -->
+<script src="js/jquery-1.11.0.js"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.min.js"></script>
 
 </body>
 
