--- a/editorial.html
+++ b/editorial.html
@@ -9,16 +9,11 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>About ALS
-        </title>
+    <title>ALS news</title>
 
-    <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="css/blog-post.css" rel="stylesheet">
+    <link href="css/blog-home.css" rel="stylesheet">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -68,45 +63,44 @@
 
         <div class="row">
 
-            <!-- Blog Post Content Column -->
-            <div class="col-lg-8">
+            <!-- Blog Entries Column -->
+            <div class="col-md-8">
 
-                <!-- Blog Post -->
+                <h1 class="page-header">
+                    Editorial
+                </h1>
 
-                <!-- Title -->
-                <h1>About ALS</h1>
-
-                <!-- Author -->
-
+                <a href="cv.mariachavez.co"><h2>Maria Chavez</h2></a>
+                <p>My name is Maria Chavez and I am a 16 year old ALS researcher from Guatemala. I started researching ALS when I was 13, 2 years after someone I know was diagnosed with ALS. Since then I've focused my efforts in understanding the disease, and I want to help others understand it too; which is the reason behind starting this blog.</p>
                 <hr>
 
-                <!-- Date/Time -->
+                <!-- First Blog Post -->
 
+            <!-- Blog Sidebar Widgets Column -->
+  
+        <!-- /.row -->
 
-                <!-- Post Content -->
-                <p class="lead">
-                  Amyotrophic lateral sclerosis (ALS), was first described in 1869 by Dr. Jean Martin Charcot. ALS is a neurodegenerative disorder which causes injury and death of upper motor neurons in the motor cortex, and of lower motor neurons in the brainstem and spinal cord. This results in progressive muscle weakness, atrophy, and spasticity culminating in death from respiratory failure.
-</p>
-                <p>The average survival rate from symptom onset is approximately 3 to 5 years, although a small proportion of patients have a more favorable prognosis. It is estimated that about 285,200 people currently live with ALS and about 16 of them die each day.
-</p>
-                <p>Amyotrophic comes from greek. "A" means no, "Myo" means muscle and "Trophic" means nourishment. "Lateral" is the area in the spinal cord that is affected. As the lateral spinal cord degenerates, it leads to scarring, "sclerosis".
-</p>
-                <p> Currently only one drug (Riluzole) is approved for the treatment of ALS. It extends patient’s lifespan for a maximum of 3 months. Despite this, there are several promising clinical trials and tools that can improve patient's quality of life.
-</p>
-                <strong><p>Familial ALS</p></strong>
+        <hr>
 
-                <p></p>
-                <hr>
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; ALS news 2014</p>
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
+            <!-- /.row -->
+        </footer>
 
-                <!-- Blog Comments -->
+    </div>
+    <!-- /.container -->
 
-                
+    <!-- jQuery Version 1.11.0 -->
+    <script src="js/jquery-1.11.0.js"></script>
 
-<!-- jQuery Version 1.11.0 -->
-<script src="js/jquery-1.11.0.js"></script>
-
-<!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
 
 </body>
 
