--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </p>
                 <p><span class="glyphicon glyphicon-time"></span> Posted on August 15, 2014 at 9:00 PM</p>
                 <p>Researchers from The Scripps Research Institute and the Mayo Clinic identified a small molecule capable of stopping disease progression in a model of C9ORF72 linked FTD and ALS, which is the most common type of the diseases, caused by a GGGGCC repeat expansion in said gene. </p>
-                <a class="btn btn-primary" href="neuron1408.html">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-danger" href="neuron1408.html" style="color: #FFFFFF">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
 
                 <hr>
               </article>
@@ -99,7 +99,7 @@
                 <img class="img-responsive" src="http://placehold.it/900x300" alt="">
                 <hr>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, quasi, fugiat, asperiores harum voluptatum tenetur a possimus nesciunt quod accusamus saepe tempora ipsam distinctio minima dolorum perferendis labore impedit voluptates!</p>
-                <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-danger" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
 
                 <hr>
               </article>-->
@@ -117,7 +117,7 @@
                 <img class="img-responsive" src="http://placehold.it/900x300" alt="">
                 <hr>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, voluptates, voluptas dolore ipsam cumque quam veniam accusantium laudantium adipisci architecto itaque dicta aperiam maiores provident id incidunt autem. Magni, ratione.</p>
-                <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-danger" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
 
                 <hr>
               </article> -->
@@ -141,7 +141,7 @@
                  <p class="lead">
                    Don't want to miss updates? Please click the below button!
                  </p>
-                 <button class="btn btn-primary btn-lg">Subscribe to my feed</button>
+                 <button class="btn btn-danger btn-lg">Subscribe to my feed</button>
                </div>
 
                <div class="well">
