--- a/neuron1408.html
+++ b/neuron1408.html
@@ -74,7 +74,7 @@
                 <!-- Blog Post -->
 
                 <!-- Title -->
-                <h1>Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</h1>
+                <h2>Identification of an ALS biomarker and a small molecule binding the GGGGCC repeat expansion</h2>
 
                 <!-- Author -->
                 <p class="lead">
@@ -120,7 +120,7 @@
                         <div class="form-group">
                             <textarea class="form-control" rows="3"></textarea>
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-danger">Submit</button>
                     </form>
                 </div>
 
@@ -176,7 +176,7 @@
      <p class="lead">
        Don't want to miss updates? Please click the below button!
      </p>
-     <button class="btn btn-primary btn-lg">Subscribe to my feed</button>
+     <button class="btn btn-danger btn-lg">Subscribe to my feed</button>
    </div>
 
    <div class="well">
