--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
 
         <div class="form-group">
             <div class="col-md-12 text-right">
-                <button type="submit" class="btn btn-lg btn-primary">Submit your message!</button>
+                <button type="submit" class="btn btn-lg btn-danger">Submit your message!</button>
             </div>
         </div>
     </form>
